[package]
name = "min_jwt"
version = "0.3.0"
license = "MIT OR Apache-2.0"
description = "Minimal JSON Web Token library"
repository = "https://github.com/bluk/min_jwt"
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
readme = "README.md"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[dependencies]
base64 = "0.13.0"

serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }

p256 = { version = "0.10.0", optional = true, default-features = false, features = ["ecdsa"] }

rsa = { version = "0.5.0", optional = true, default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.0", optional = true, default-features = false }

ring = { version = "0.16.20", optional = true }

[dev-dependencies]
rand = { version = "0.8" }
p256 = { version = "0.10.0",default-features = false, features = ["ecdsa", "jwk", "pem"] }
rsa = { version = "0.5.0", default-features = false, features = ["alloc", "pem"] }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]