[package]
name = "min_jwt"
version = "0.7.0"
license = "MIT OR Apache-2.0"
description = "Minimal JSON Web Token library"
repository = "https://github.com/bluk/min_jwt"
documentation = "https://docs.rs/min_jwt"
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
readme = "README.md"
keywords = ["jwt", "jws", "jose", "token", "authentication"]
categories = ["authentication", "web-programming", "wasm", "cryptography", "encoding"]
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[dependencies]
base64ct = { version = "1.5", default-features = false, features = ["alloc"] }

serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }

p256 = { version = "0.12.0", optional = true, default-features = false, features = ["ecdsa"] }

rsa = { version = "0.8", optional = true, default-features = false }
sha2 = { version = "0.10.6", optional = true, default-features = false, features = ["oid"] }
signature = { version = "2.0", optional = true, default-features = false }

ring = { version = "0.16.20", optional = true }

[dev-dependencies]
rand = { version = "0.8" }
p256 = { version = "0.12.0", default-features = false, features = ["ecdsa", "jwk", "pem"] }
rsa = { version = "0.8", default-features = false, features = ["pem"] }
signature = { version = "2.0", default-features = false }

[features]
default = ["std"]

std = ["base64ct/std", "serde/std", "serde_json/std"]

alloc = ["base64ct/alloc", "serde/alloc", "serde_json/alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
